--- a/contact.html
+++ b/contact.html
@@ -14,36 +14,45 @@
 </head>
 
 <body>
-<div class="topnav">
-    <img src="Favicon.png" id=bannerLogo>
-    <div id = "navName">
-        <a>Our Nesting Space</a>
-    </div>
+  <div class="topnav">
+    <div class="row">
+        <div class="column">
+            <div class="row">
+                <div class="logo-image">  <img src="Favicon.png" id=bannerLogo>  </div>
+                <div id = "navName">   <a>Our Nesting Space</a>      </div>
+              </div>
+            </div>
+
+            <div class="column">
+
+            </div>
     <div id = "navOptions">
         <a href="index.html">Home</a>
         <a href="https://ournestingspace.blogspot.com">Blog</a>
         <a class="active" href="#">Contact</a>
-        <!-- <a href="about.html">About</a>  -->  
-    </div> 
-    
+        <a href="about.html">About</a>
+    </div>
+
+  </div>
+</div>
+
+
+<div class="hb-p-6067b349809a723ea869b2f6-1"></div><img height="1" width="1" style="display:none" src="https://www.honeybook.com/p.png?pid=6067b349809a723ea869b2f6">
+<script>
+  (function(h,b,s,n,i,p,e,t) {
+    h._HB_ = h._HB_ || {};h._HB_.pid = i;;;;
+    t=b.createElement(s);t.type="text/javascript";t.async=!0;t.src=n;
+    e=b.getElementsByTagName(s)[0];e.parentNode.insertBefore(t,e);
+})(window,document,"script","https://widget.honeybook.com/assets_users_production/websiteplacements/placement-controller.min.js","6067b349809a723ea869b2f6");
+</script>
+
+<div id="footer">
+  <p>2020 @ Our Nesting Space, LLC. All rights reserved</p>
+  <p>ournestingspace@gmail.com</p>
+  <p><a href="https://www.facebook.com/ournestingspace">Facebook</a></p>
   </div>
 
 
-<p id ="contactText"> Contact me through <a href="https://www.facebook.com/ournestingspace">Facebook</a> or at ournestingspace@gmail.com.</p>
-
-
-
-    
-<div id="footer">
-    <p>2020 @ Our Nesting Space, LLC. All rights reserved</p>
-  <p>ournestingspace@gmail.com</p>
-  <p><a href="https://www.facebook.com/ournestingspace">Facebook</a></p>
-</div> 
-
-
-
 </body>
-
-
 
 </html>
