adding text to home page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet">
-
+    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
 
@@ -70,7 +70,9 @@
 </section>
 
 <section id="leftside-section">
-
+  <div id="mainDiv">
+    <p id="mainText">I collaborate with homeowners to create the custom yard that perfectly fits their family.</p>
+</div>
 </section>
 
 
